--- a/app/index.html
+++ b/app/index.html
@@ -16,8 +16,8 @@
     <script type="text/babel">
     </script>
     <script>
-      var url = document.location.hostname;
-      var socket = io(url + ":8000");
+      var url = document.location.hostname.split("//")[1];
+      var socket = io("http://" + url + ":8000");
       socket.on('github', function (data) {
         document.write(data);
         console.log(data);
