--- a/app/index.html
+++ b/app/index.html
@@ -16,8 +16,8 @@
     <script type="text/babel">
     </script>
     <script>
-      var url = document.location.hostname.split("//")[0];
-      var socket = io("http://" + url);
+      //var url = document.location.hostname.split("//")[0];
+      var socket = io(document.location.hostname);
       socket.on('github', function (data) {
         document.write(data);
         console.log(data);
