--- a/app/index.html
+++ b/app/index.html
@@ -15,21 +15,21 @@
     <title>GitHub Audio</title>
     <link rel="shortcut icon" type="image/png" href="/static/public/images/favicon.png"/>
     <link rel="stylesheet" href="/static/public/css/main.css"/>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/react/15.3.2/react.min.js"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/react/15.3.2/react-dom.min.js"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/odometer/0.4.7/themes/odometer-theme-default.css" />
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/howler/2.0.0/howler.min.js"></script>
     <script src="//cdn.socket.io/socket.io-1.4.5.js"></script>
+    <script src="//cdn.jsdelivr.net/odometer/0.4.7/odometer.min.js"></script>
     <script src="/static/public/js/main.js"></script>
     <script src="/static/public/js/ui.js"></script>
   </head>
   <body>
     <header>
       <h1 class="header-text">GitHub Audio</h1>
-      <div class="active-nerds">Active nerds: <span id="active-nerds-value">1</span></div>
+      <div class="active-nerds"><span id="active-nerds-value" class="odometer">1</span></div>
     </header>
     <div id="content">
-      
+
     </div>
   </body>
 </html>
