Start playing sounds

--- a/app/index.html
+++ b/app/index.html
@@ -20,6 +20,7 @@
     <script src="//cdnjs.cloudflare.com/ajax/libs/howler/2.0.0/howler.min.js"></script>
     <script src="//cdn.socket.io/socket.io-1.4.5.js"></script>
     <script src="//cdn.jsdelivr.net/odometer/0.4.7/odometer.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/d3/4.2.6/d3.js"></script>
     <script src="/static/public/js/main.js"></script>
     <script src="/static/public/js/ui.js"></script>
   </head>
@@ -28,8 +29,7 @@
       <h1 class="header-text">GitHub Audio</h1>
       <div class="active-nerds"><span id="active-nerds-value" class="odometer">1</span></div>
     </header>
-    <div id="content">
-
+    <div id="area">
     </div>
   </body>
 </html>
