Circle drawing stating to work

--- a/app/index.html
+++ b/app/index.html
@@ -21,6 +21,7 @@
     <script src="//cdn.socket.io/socket.io-1.4.5.js"></script>
     <script src="//cdn.jsdelivr.net/odometer/0.4.7/odometer.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/d3/4.2.6/d3.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/seedrandom/2.4.2/seedrandom.min.js"></script>
     <script src="/static/public/js/main.js"></script>
     <script src="/static/public/js/ui.js"></script>
   </head>
