Add mute/unmute feature

--- a/app/index.html
+++ b/app/index.html
@@ -47,7 +47,8 @@
       </h1>
       <div class="events-remaining">
         <span class="events-remaining-value odometer"></span>&nbsp;
-        <span class="events-remaining-text">events remaining in queue</span>
+        <span class="events-remaining-text">events remaining in queue</span>&nbsp;
+        <img id="cmdMute" src="/static/public/images/speaker.svg" style="width:32px;height:32px;cursor:pointer;" alt="mute/unmute"/>
       </div>
     </header>
     <div id="area">
