--- a/app/index.html
+++ b/app/index.html
@@ -58,8 +58,9 @@
     </div>
     <footer>
       <div style="float:left;line-height:1.3em;">
-        view on <a href="https://github.com/debugger22/github-audio" target="_blank">GitHub</a><br/>
-        developed by <a href="https://github.com/debugger22" target="_blank">@debugger22</a>
+        this project is open source, you can view it on <a href="https://github.com/debugger22/github-audio" target="_blank">GitHub</a><br/>
+        developed by <a href="https://github.com/debugger22" target="_blank">@debugger22</a><br/><br/>
+        ProTip: It's nice to keep it open in the background
       </div>
       <div style="float:right;margin-right:3%;text-align:right;line-height:1.3em;">
         inspired by <a href="http://hatnote.com" target="_blank">hatnote</a><br/>
