Disable horizontal scrolling and some UI fixes for mobile. Increase queue size to 100. closes #3

--- a/app/index.html
+++ b/app/index.html
@@ -55,8 +55,8 @@
       <div class="events-remaining">
         <span class="events-remaining-value odometer"></span>&nbsp;
         <span class="events-remaining-text">events remaining in queue</span>&nbsp;
-        <img id="cmdMute" src="/static/public/images/speaker.svg" style="width:32px;height:32px;cursor:pointer;" alt="mute/unmute"/>
       </div>
+      <img id="cmdMute" src="/static/public/images/speaker.svg" alt="mute/unmute"/>
     </header>
     <div id="area">
       <div class="online-users-div">
@@ -64,12 +64,12 @@
       </div>
     </div>
     <footer>
-      <div style="float:left;line-height:1.3em;">
+      <div class="footer-left-text-block">
         this project is open source, you can view it on <a href="https://github.com/debugger22/github-audio" target="_blank">GitHub</a><br/>
         developed by <a href="https://github.com/debugger22" target="_blank">@debugger22</a><br/><br/>
         ProTip: It's nice to keep it open in the background
       </div>
-      <div style="float:right;margin-right:3%;text-align:right;line-height:1.3em;">
+      <div class="footer-right-text-block">
         inspired by <a href="http://hatnote.com" target="_blank">hatnote</a><br/>
         <div>icons made by <a href="http://www.flaticon.com/authors/freepik" target="_blank" title="Freepik">Freepik</a></div>
       </div>
