--- a/app/index.html
+++ b/app/index.html
@@ -67,7 +67,7 @@
       <div class="footer-left-text-block">
         this project is open source, you can view it on <a href="https://github.com/debugger22/github-audio" target="_blank">GitHub</a><br/>
         developed by <a href="https://github.com/debugger22" target="_blank">@debugger22</a><br/><br/>
-        ProTip: It's nice to keep it open in the background
+        ProTip: It's actually kind of nice to leave on the background
       </div>
       <div class="footer-right-text-block">
         inspired by <a href="http://hatnote.com" target="_blank">hatnote</a><br/>
