Add a feature to filter out events of specified repos/orgs

--- a/app/index.html
+++ b/app/index.html
@@ -69,8 +69,8 @@
       </div>
     </div>
     <div id="config-area">
-      <div id="consumption-rate-div">
-        Set events consumption rate <div id="eventConsumptionSlider"></div>
+      <div id="org-repo-filter-div">
+        Enter your organization's or repository's names to filter events&nbsp; <input type="text" id="org-repo-filter-name" placeholder="github google facebook"/>
       </div>
       <div class="site-description">
         <h4>About</h4>
