--- a/app/index.html
+++ b/app/index.html
@@ -70,7 +70,7 @@
     </div>
     <div id="config-area">
       <div id="org-repo-filter-div">
-        Enter your organization's or repository's names to filter events&nbsp; <input type="text" id="org-repo-filter-name" placeholder="github google facebook"/>
+        Enter your organization's or repository's names to filter events&nbsp; <input type="text" id="org-repo-filter-name" />
       </div>
       <div class="site-description">
         <h4>About</h4>
