Add app links to website

--- a/app/index.html
+++ b/app/index.html
@@ -70,7 +70,8 @@
     </div>
     <div id="config-area">
       <div id="org-repo-filter-div">
-        Enter your organization's or repository's names to filter events&nbsp; <input type="text" id="org-repo-filter-name" />
+        Enter your organization's or repository's names to filter events&nbsp; <input type="text" id="org-repo-filter-name" /><br/>
+        You can also download it for <a href="/static/public/bin/GitHub-Audio-v1.0-macOS-x64.zip" target="_blank">macOS</a> and <a href="/static/public/bin/GitHub-Audio-v1.0-linux-x64.zip" target="_blank">Linux</a>.
       </div>
       <div class="site-description">
         <h4>About</h4>
