Add DigitalOcean logo to the website

--- a/app/index.html
+++ b/app/index.html
@@ -89,7 +89,7 @@
         this project is open source, you can view it on <a href="https://github.com/debugger22/github-audio" target="_blank">GitHub</a><br/>
         developed by <a href="https://github.com/debugger22" target="_blank">@debugger22</a><br/><br/>
         ProTip: It's actually kind of nice to leave on the background<br/><br/>
-        You can back this website <a href="https://www.indiegogo.com/projects/github-audio-music#/" target="_blank">here</a>.
+        <a href="https://www.digitalocean.com/" target="_blank"><img style="width:150px;cursor: pointer;" src="https://www.digitalocean.com/assets/media/logos-badges/DO_Powered_by_Badge_white-a05c38f6.png" alt="DigitalOcean" /></a>
       </div>
       <div class="footer-right-text-block">
         inspired by <a href="http://hatnote.com" target="_blank">hatnote</a><br/>
