Fix an alignment issue and reduce header font size

--- a/app/index.html
+++ b/app/index.html
@@ -86,7 +86,7 @@
 
     <footer>
       <div class="footer-left-text-block">
-        <span>Disclaimer: this project is not in any way affiliated with GitHub.</span>
+        <span>Disclaimer: this project is not in any way affiliated with GitHub.</span><br/>
         this project is open source, you can view it on <a href="https://github.com/debugger22/github-audio" target="_blank">GitHub</a><br/>
         developed by <a href="https://github.com/debugger22" target="_blank">@debugger22</a><br/><br/>
         ProTip: It's actually kind of nice to leave on the background<br/><br/>
