update html description

--- a/app/index.html
+++ b/app/index.html
@@ -78,8 +78,8 @@
         <br/>
         <p>This website tracks events happening across GitHub and converts them to music notes based on certain parameters.</p><br/>
         <p>
-          There are three types of sounds(bell, string pluck and string swell) based on four types of events(PushEvent, PullRequestEvent, IssuesEvent and IssueCommentEvent).
-          Bells represent PushEvents, string plucks represent IssuesEvents and IssueCommentEvents whereas string swells represent PullRequestEvents.
+          There are three types of sounds(bell, string pluck and string swell) based on six types of events(PushEvent, PullRequestEvent, IssuesEvent, IssueCommentEvent, PullRequestReviewCommentEvent and CommitCommentEvent).
+          Bells represent PushEvents, string plucks represent IssuesEvents, IssueCommentEvents, PullRequestReviewCommentEvent and CommitCommentEvent whereas string swells represent PullRequestEvents.
         </p>
       </div>
     </div>
