--- a/app/index.html
+++ b/app/index.html
@@ -89,7 +89,7 @@
         <span>Disclaimer: this project is not in any way affiliated with GitHub.</span><br/>
         this project is open source, you can view it on <a href="https://github.com/debugger22/github-audio" target="_blank">GitHub</a><br/>
         developed by <a href="https://github.com/debugger22" target="_blank">@debugger22</a><br/><br/>
-        <div id="coinwidget-bitcoin-37XgcaBrHibCMHzvZeZcj5mX5kYn8LUnui"></div>
+        <div id="coinwidget-bitcoin-37XgcaBrHibCMHzvZeZcj5mX5kYn8LUnui"></div><br/>
         ProTip: It's actually kind of nice to leave on the background<br/><br/>
         <a href="https://www.digitalocean.com/" target="_blank"><img style="width:150px;cursor: pointer;" src="https://www.digitalocean.com/assets/media/logos-badges/DO_Powered_by_Badge_white-a05c38f6.png" alt="DigitalOcean" /></a>
       </div>
